--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "play-tral-app",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -8,7 +8,6 @@
     "jest-expo": "25.0.0",
     "react-test-renderer": "16.2.0"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "android-linux": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && react-native run-android",
     "start": "expo start",
@@ -28,6 +27,7 @@
     "react-firebase": "^2.2.8",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-elements": "^0.19.0",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-svg-charts": "^5.2.0",
     "react-navigation": "^1.5.7",
     "router": "^1.3.2",
