--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.3.1",
     "react-firebase": "^2.2.8",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-calendars": "^1.21.0",
     "react-native-elements": "^0.19.0",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-svg-charts": "^5.2.0",
