--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "rn_playtrak",
-    "description": "This project is really great.",
+    "name": "Play & Trak",
+    "description": "Track your gambling habits over time",
     "slug": "rn_playtrak",
     "privacy": "public",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/ic_launcher.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -20,8 +20,11 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "android": {
+      "package": "com.mcgillyouthgambling.playtrak"
+    },
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.mcgillyouthgambling.playtrak"
     }
   }
 }
